# 42-Pacman

./: .gitignore  INSTRUCTIONS.txt  Makefile  README.md  TODO.md  config.json  hhighscores.json  highscore.json  pac-man.py  pacman.spec  pyproject.toml
map_generation/: __init__.py  visualizer.py
objects/: __init__.py  assets.py  ghost.py  maze.py  player.py  score.py
parsing/: config_example.json  parser.py
project_management/: 01_project_analysis.md  02_timeline.md  03_team_organization.md
src/: __init__.py  paths.py
src/objects/: __init__.py  assets.py  ghost.py  maze.py  player.py  score.py
src/parsing/: __init__.py  parser.py
src/ui/: __init__.py  game_hud.py  geometry.py  inputs.py
src/visualization/: __init__.py  game_view.py  lose_view.py  menu_view.py  pause_view.py  scaler.py  transition_view.py  win_view.py
visualization/: __init__.py  game_view.py  lose_view.py  menu_view.py  pause_view.py  scaler.py  transition_view.py  visualizer.py  win_view.py
