[project]
name = "pac-man"
version = "1.0.0"
description = "Recreating the famous arcade game Pac-man"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade>=3.3.3",
    "numpy",
    "mazegenerator",
    "pydantic>=2.13.4",
    "pyinstaller"
]

[tool.uv.sources]
mazegenerator = { path = "mazegenerator-2.0.2-py3-none-any.whl" }

[tool.mypy]
# Resolve third-party types (e.g. arcade ships a py.typed marker) from the
# project's virtualenv, even when mypy itself runs from another environment.
python_executable = ".venv/bin/python"

[[tool.mypy.overrides]]
# mazegenerator has no type stubs / py.typed marker.
module = ["mazegenerator.*"]
ignore_missing_imports = true
